# feedkit

./: CATALOG.md  CHANGELOG.md  CONTRIBUTING.md  README.ko.md  README.md  llms-full.txt  llms.txt  pyproject.toml  server.json
feedkit/: __init__.py  __main__.py  catalog.py  core.py  mcp_server.py  opml.py  storage.py
feedkit/data/: feeds.json
tests/unit/: test_catalog.py  test_cli.py  test_opml.py  test_storage.py
